--- a/README.org
+++ b/README.org
@@ -41,12 +41,14 @@
 
    #+NAME: encoding
    #+BEGIN_SRC elisp
-     (require 'un-define "un-define" t)
-     (set-buffer-file-coding-system 'utf-8 'utf-8-unix)
-     (set-default buffer-file-coding-system 'utf-8-unix)
-     (set-default-coding-systems 'utf-8-unix)
-     (prefer-coding-system 'utf-8-unix)
-     (set-default default-buffer-file-coding-system 'utf-8-unix)
+     (setq utf-translate-cjk-mode nil) ; disable CJK coding/encoding (Chinese/Japanese/Korean characters)
+     (set-language-environment 'utf-8)
+     (setq locale-coding-system 'utf-8)
+     (set-default-coding-systems 'utf-8)
+     (set-terminal-coding-system 'utf-8)
+     (unless (eq system-type 'windows-nt)
+       (set-selection-coding-system 'utf-8))
+     (prefer-coding-system 'utf-8)
    #+END_SRC
 
 
