rm unnecessary file

--- a/README.org
+++ b/README.org
@@ -329,6 +329,7 @@
      (put 'downcase-region 'disabled nil)
      (put 'set-goal-column 'disabled nil)
      (put 'narrow-to-region 'disabled nil)
+     (require 'grep)
 
      ;; (rainbow-mode)
      ;; (rainbow-identifiers-mode)
@@ -833,6 +834,8 @@
                  )
                )
    #+END_SRC
+
+
 ** Magit
 
    #+NAME: stylus
@@ -842,7 +845,8 @@
      (setq magit-diff-use-overlays nil)
    #+END_SRC
 
- * EditorConfig
+
+** EditorConfig
 
    #+BEGIN_SRC org :tangle "~/.editorconfig"
      root = true
